# Robotila

./: .gitignore  Makefile  README.md  pyproject.toml
app/: __init__.py  chatbot.py  main.py  utils.py
src/: stt.py
